WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86505
[WK2] Crash when dropping a reference to a non-existing file
https://bugs.webkit.org/show_bug.cgi?id=86505
Summary
[WK2] Crash when dropping a reference to a non-existing file
Alexey Proskuryakov
Reported
2012-05-15 11:57:28 PDT
Drag data can contain non-existing file paths (an application you're dragging form has full control of that). We should not crash. <
rdar://problem/11402084
>
Attachments
proposed fix
(1.81 KB, patch)
2012-05-15 12:01 PDT
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-05-15 12:01:09 PDT
Created
attachment 142020
[details]
proposed fix
Darin Adler
Comment 2
2012-05-15 12:04:07 PDT
Comment on
attachment 142020
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=142020&action=review
> Source/WebKit2/WebProcess/WebPage/WebPage.cpp:2191 > + RefPtr<SandboxExtension> extension = SandboxExtension::create(sandboxExtensionsHandleArray[i]); > + if (extension) > + m_pendingDropExtensionsForFileUpload.append(extension);
I would have put the definition inside the if statement.
Alexey Proskuryakov
Comment 3
2012-05-15 12:52:28 PDT
Committed <
http://trac.webkit.org/changeset/117124
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug