        [WK2] Crash when dropping a reference to a non-existing file         https://bugs.webkit.org/show_bug.cgi?id=86505         <rdar://problem/11402084>

Reviewed by Darin Adler.

        * WebProcess/WebPage/WebPage.cpp: (WebKit::WebPage::performDragControllerAction): Check that
        extension handle actually has a non-null extension. Extensions for non-existent files can not
        exist, so they are passed as null ones.



Canonical link: https://commits.webkit.org/104095@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117124 268f45cc-cd09-0410-ab3c-d52691b4dbfc